[tool.poetry]
name = "pudmed-research"
version = "0.1.3"
description = "This is a Pudmed Project"
license = "MIT"
authors = ["Varshini <varshinidurairaj@gmail.com>"]
readme = "README.md"
packages = [{ include = "pudmed_research" }]


[tool.poetry.dependencies]
python = ">=3.9"
requests = ">=2.31.0,<3.0.0"
pandas = ">=2.0.0,<3.0.0"
transformers = ">=4.40.0,<5.0.0"
torch = ">=2.5.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "pudmed_research.cli:main"
